# archoffline

./: .flake8  .gitignore  .gitmodules  README.md  aur.patch  cmd_history.txt  customize.sh.example  offline.py  pyproject.toml  requrements.txt
.github/workflows/: flake8.yaml  guarddog.yaml  mypy.yaml
archoffline/: __init__.py  __main__.py
