[build-system]
requires = ["flit_core >=3.5.1,<4", "setuptools>=45", "wheel"]
build-backend = "flit_core.buildapi"

[project]
name = "archoffline"
dynamic = ["version"]
description = "Builds offline installation mediums for Arch Linux."
authors = [
    {name = "Anton Hvornum", email = "anton@hvornum.se"},
]
readme = "README.md"
requires-python = ">=3.10"

keywords = ["linux", "arch", "offline", "iso"]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Home = "https://archlinux.life"
Documentation = "https://archoffline.readthedocs.io/"
Source = "https://github.com/Torxed/archoffline"

# [project.scripts]
# archoffline = "offline:main"

[project.optional-dependencies]
doc = ["sphinx"]

[tool.flit.sdist]
exclude = ["tests/"]
include = ["docs/", "archinstall"]

[tool.mypy]
python_version = "3.10"
exclude = [
    "tests/",
    "archinstall/"
]
follow_imports = "skip"
check_untyped_defs = true
strict = true